--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "concurrently": "^4.1.0",
     "express": "^4.16.3",
     "gravatar": "^1.6.0",
+    "handlebars": "^4.1.2",
     "jsonwebtoken": "^8.2.2",
-    "mongoose": "^5.1.3",
-    "npm": "^6.5.0",
+    "lodash": "^4.17.15",
+    "lodash.template": "^4.5.0",
+    "mongoose": "^5.6.9",
+    "mpath": "^0.6.0",
+    "npm": "^6.10.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.3.0"
